--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -853,9 +853,9 @@
             }
 
             .nickname-input {
-                width: 2.8rem;
+                width: 1.4rem;
                 max-width: 2.8rem;
-                font-size: 0.85rem;
+                font-size: 0.6rem;
             }
 
             .nick-checker {
