--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -848,6 +848,7 @@
             }
 
             .nickname-bar {
+                font-size: 0.6rem;
                 padding: 0.3rem 0.4rem;
                 min-width: 0;
             }
