--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -854,14 +854,14 @@
             }
 
             .nickname-input {
-                width: 1.4rem;
+                width: 20%;
                 max-width: 2.8rem;
                 font-size: 0.6rem;
             }
 
             .nick-checker {
-                width: 20px;
-                height: 20px;
+                width: 10%;
+                height: 10%;
             }
 
             .checker-label,
