--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -852,7 +852,10 @@
                 padding: 0.3rem 0.4rem;
                 min-width: 0;
             }
-
+            .nickname-separator {
+                font-size: 0.6rem;
+            }
+            
             .nickname-input {
                 width: 20%;
                 max-width: 2.8rem;
