--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -855,7 +855,7 @@
             .nickname-separator {
                 font-size: 0.6rem;
             }
-            
+
             .nickname-input {
                 width: 20%;
                 max-width: 2.8rem;
@@ -863,8 +863,8 @@
             }
 
             .nick-checker {
-                width: 80%;
-                height: 10%;
+                width: 20px;
+                height: 20px;
             }
 
             .checker-label,
