--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -844,7 +844,7 @@
             }
 
             .nickname_inputs {
-                min-width: 0;
+                min-width: 5rem;
             }
 
             .nickname-bar {
