--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -263,7 +263,7 @@
         }
 
         :root {
-            --checker-size: 38px;
+            --checker-size: 40px;
             --checker-gap: 0.8rem;
             --checker-pad-y: 0.4rem;
             --checker-pad-x: 0.8rem;
@@ -302,8 +302,8 @@
         }
 
         .checker-btn .checker-dot {
-            width: 10px;
-            height: 10px;
+            width: var(--checker-size);
+            height: var(--checker-size);
             border-radius: 50%;
             background: #1e90ff;
             opacity: 0;
