--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -314,7 +314,7 @@
             gap: 0.5em;
             color: white;
             flex-shrink: 0;
-            font-size: var(--checker-selector-size, 40px);
+            font-size: 20px;
         }
 
         .bar-options {
