--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -113,7 +113,7 @@
             margin: 0;
             flex: 1 1 0;
             min-width: 0;
-            font-size: 16px;
+            font-size: 5px;
         }
 
         .nickname-bar {
