--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -186,7 +186,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 1rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
             margin: 1rem 0;
             box-sizing: border-box;
             max-width: 100%;
@@ -212,7 +213,7 @@
             min-height: 4.8rem;
             max-width: 100%;
             display: flex;
-            gap: 1rem;
+            gap: 0.5em;
             justify-content: center;
             align-items: center;
             flex-wrap: nowrap;
@@ -259,9 +260,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 0.5em;
+            gap: 0.2em;
             flex-shrink: 0;
-            font-size: 20px;
+            font-size: 30px;
         }
 
         .checker-options {
@@ -271,7 +272,7 @@
             background-color: #3b3b3b;
             border: 0.075em double #555;
             border-radius: 999px;
-            padding: 0.4em 0.8em;
+            padding: 0.2em 0.4em;
         }
 
         .checker-btn {
@@ -312,10 +313,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 0.5em;
+            gap: 0.2em;
             color: white;
             flex-shrink: 0;
-            font-size: 20px;
+            font-size: 30px;
         }
 
         .bar-options {
