--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -127,7 +127,7 @@
         }
 
         .nickname-input {
-            width: 7em;
+            width: 30%;
             font-size: 1em;
             text-align: center;
             border: none;
