--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -268,7 +268,7 @@
             align-items: center;
             background-color: #3b3b3b;
             border: 0.075em double #555;
-            border-radius: 999px;
+            border-radius: 0.75em;
             padding: 0.2em 0.4em;
         }
 
@@ -322,7 +322,7 @@
             align-items: center;
             background-color: #3b3b3b;
             border: 0.075em double #555;
-            border-radius: 999px;
+            border-radius: 0.75em;
             padding: 0.2em 0.4em;
         }
 
@@ -792,7 +792,7 @@
         <div class="selectors-wrapper">
             <div class="selectors-container">
                 <div class="checker-selector">
-                    <div class="checker-label">Шашки:</div>
+                    <div class="checker-label">Шашки</div>
                     <div class="checker-options">
                         <div class="checker-btn white selected" data-color="white" role="button"
                             aria-label="Белые шашки">
@@ -804,7 +804,7 @@
                     </div>
                 </div>
                 <div class="bar-selector">
-                    <div class="bar-label">На баре:</div>
+                    <div class="bar-label">На баре</div>
                     <div class="bar-options">
                         <div class="bar-checker">
                             <select id="white-bar-select" class="bar-checker-select white">
