--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -57,13 +57,15 @@
         }
 
         .above-circle {
-            top: -0.2em;
-            right: -0.2em;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .below-circle {
-            bottom: -0.2em;
-            right: -0.2em;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         canvas {
