--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -826,7 +826,7 @@
                     <div class="nickname-label"></div>
                     <div class="nickname-bar">
                         <span class="nick-checker white" aria-hidden="true">
-                            <div class="green-circle above-circle"></div>
+                            <div class="green-circle below-circle"></div>
                         </span>
                         <label for="white-input" class="sr-only">Белые</label>
                         <input type="text" id="white-input" class="nickname-input" value="nick_1">
@@ -834,7 +834,7 @@
                         <label for="black-input" class="sr-only">Черные</label>
                         <input type="text" id="black-input" class="nickname-input" value="nick_2">
                         <span class="nick-checker black" aria-hidden="true">
-                            <div class="green-circle below-circle"></div>
+                            <div class="green-circle above-circle"></div>
                         </span>
                     </div>
                 </div>
