--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -114,6 +114,7 @@
             align-items: center;
             margin: 0;
             flex: 1 1 0;
+            padding-top: 1rem;
             min-width: 0;
             font-size: 20px;
         }
@@ -823,7 +824,6 @@
                     </div>
                 </div>
                 <div class="nickname_inputs">
-                    <div class="nickname-label"></div>
                     <div class="nickname-bar">
                         <span class="nick-checker white" aria-hidden="true">
                             <div class="green-circle below-circle"></div>
