--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -115,6 +115,7 @@
             margin: 0;
             flex: 1 1 0;
             padding-top: 1rem;
+            max-width: 11rem;
             min-width: 0;
             font-size: 15px;
         }
@@ -274,7 +275,7 @@
             background-color: #3b3b3b;
             border: 0.075em double #555;
             border-radius: 0.3em;
-            padding: 0.1em 0.2em;
+            padding: 0.2em 0.2em;
         }
 
         .checker-btn {
@@ -834,6 +835,30 @@
                         <span class="nick-checker black" aria-hidden="true">
                             <div class="green-circle above-circle"></div>
                         </span>
+                        <div>
+                        <label for="upper-score">Длина матча:</label>
+                            <select id="match_lenght" class="selector-size">
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -896,30 +921,6 @@
                                 <option value="18">18</option>
                                 <option value="19">19</option>
                                 <option value="20">20</option>
-                            </select>
-                        </div>
-                        <div>
-                            <label for="upper-score">Длина матча:</label>
-                            <select id="match_lenght" class="selector-size">
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                                <option value="13">13</option>
-                                <option value="14">14</option>
-                                <option value="15">15</option>
-                                <option value="16">16</option>
-                                <option value="17">17</option>
-                                <option value="18">18</option>
-                                <option value="19">19</option>
-                                <option value="20">20</option>
-                                <option value="21">21</option>
                             </select>
                         </div>
                     </div>
