--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -836,7 +836,7 @@
                             <div class="green-circle above-circle"></div>
                         </span>
                         <div>
-                        <label for="upper-score">Длина матча:</label>
+                        <label for="match_lenght">Матч до</label>
                             <select id="match_lenght" class="selector-size">
                                 <option value="3">3</option>
                                 <option value="4">4</option>
