--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -426,7 +426,26 @@
             text-align: left;
             flex-shrink: 0;
         }
-
+        .match-length-selector {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+        .match-length-selector label {
+            color: white;
+            font-size: 0.8rem;
+        }
+        .match-length-selector select {
+            text-align: center;
+            border: 1px solid #444;
+            border-radius: 0.25rem;
+            background-color: #2d2d2d;
+            color: white;
+            box-sizing: border-box;
+            -webkit-appearance: none;
+            appearance: none;
+        }
         .score-inputs select {
             text-align: center;
             border: 1px solid #444;
@@ -836,7 +855,8 @@
                             <div class="green-circle above-circle"></div>
                         </span>
                         <div>
-                        <label for="match_lenght">Матч до</label>
+                        <div class="match-length-selector">
+                            <label for="match_lenght">Матч до</label>
                             <select id="match_lenght" class="selector-size">
                                 <option value="3">3</option>
                                 <option value="4">4</option>
@@ -859,6 +879,7 @@
                                 <option value="21">21</option>
                             </select>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
